--- a/cfe/mootools/1.2/ChangeLog.txt
+++ b/cfe/mootools/1.2/ChangeLog.txt
@@ -1,6 +1,10 @@
 CHANGE LOG FOR Custom Form Elements for Mootools 1.2
 ****************************************************
 
+01/16/09 - 0.8.3
+****************************************************
+- partially fixed bug #2207752 - scrollbar is still behaving strange due to mootools <> opera getStyle() buggy
+- fixed bug #2088490
 
 0.8beta
 ****************************************************
