--- a/cfe/mootools/1.2/ChangeLog.txt
+++ b/cfe/mootools/1.2/ChangeLog.txt
@@ -3,6 +3,10 @@ CHANGE LOG FOR Custom Form Elements for Mootools 1.2
 
 ###CHANGELOG
 
+# XX/08/09 - 0.9.3
+- fixed #2827036, #2800700, #2768909
+- better select keyboard behaviour (thanks for the detailed information phazei)
+
 # 14/05/09 - 0.91
 - support for disabled attribute
 - some css tweaks (thanks joss)
