--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,6 @@
-= Custom Form Elements for mootools 1.2
+= Custom Form Elements for mootools 1.3
+
+*NOT FNISHED nor STABLE atm*
 
 Custom Form Elements unites all efforts in the web to enhance web-based XHTML forms
 in terms of style, usability and accessibility by using Javascript and/or CSS.
@@ -23,7 +25,8 @@ See cfe/cfe.autostart.sample.js
 
 == Authors and credits
 
-Authors::                Maik Vlcek
+Authors::  Maik Vlcek ({mediavrog}[https://github.com/mediavrog])
+Supported by::  {frozeman}[https://github.com/frozeman]
 Iconset::  Fugue Icon Set by Yusuke Kamiyamane http://p.yusukekamiyamane.com/ (CC3.0 Attribution)
 
 CFE would be nothing without the work of other great developers and designers.
